--- a/Pages/List.html
+++ b/Pages/List.html
@@ -4,14 +4,24 @@
         <title>List Presiden Indonesia</title>
     </head>
     <body>
-        <center>
-            <h2 style="margin-top: 0;">Vanya Rajwadevy</h2>
+        <header>
+            <table>
+                <tr>
+                    <center>
+                        <h1 style="text-align: center;" width="75%">Tugas FSWD Arkatama Batch 2</h1>
+                    </center> 
+                </tr>
+            </table>
+            <hr>
+        </header>
+        
+        <center>    
                 <nav>
-                    <p><a href="../index.html">Homepage</a></p>
-                    <p><a href="heading.html">Heading</a></p>
-                    <p><a href="Text.html">Text Formating</a></p>
-                    <p><a href="List.html">List</a></p>
-                    <p><a href="Anchor & Image.html">Anchor and Image</a></p>
+                    <p><a href="../index.html">Homepage</a> || <a href="heading.html">Heading</a></p>
+                    <p><a href="Text.html">Text Formating</a> || <a href="List.html">List</a></p>
+                    <p><a href="Anchor & Image.html">Anchor and Image</a> || <a href="Nota Pembelian.html">Nota Pembelian</a> </p>
+                    <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
+                                            
                 </nav>
         </center>
 
