--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
         <title>Homepage</title>
     </head>
     <body>
+        <header>
+            <table>
+                <tr>
+                    <center>
+                        <h1 style="text-align: center;" width="75%">Tugas FSWD Arkatama Batch 2</h1>
+                    </center> 
+                </tr>
+            </table>
+            <hr>
+        </header>
+        
         <center>
             <img src="Assets/profile.jpg" alt="profile" width="15%">
 
@@ -12,13 +23,19 @@
             </h2>
             <p>ID Kegiatan : 4545666</p>
             
-                <nav>
-                    <p><a href="index.html">Homepage</a></p>
-                    <p><a href="Pages/heading.html">Heading</a></p>
-                    <p><a href="Pages/Text.html">Text Formating</a></p>
-                    <p><a href="Pages/List.html">List</a></p>
-                    <p><a href="Pages/Anchor & Image.html">Anchor and Image</a></p>
-                </nav>
+            <nav>
+                <p><a href="index.html">Homepage</a> || <a href="Pages/heading.html">Heading</a></p>
+                <p><a href="Pages/Text.html">Text Formating</a> || <a href="Pages/List.html">List</a></p>
+                <p><a href="Pages/Anchor & Image.html">Anchor and Image</a> || <a href="Pages/Nota Pembelian.html">Nota Pembelian</a> </p>
+                <p><a href="Pages/Playlist Video.html">Playlist Video</a> || <a href="Pages/Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p>                          
+            </nav>
+                <footer>
+                    <br>
+                    <br>
+                    <strong> THANK YOU </strong>
+
+                </footer>
         </center>
+
     </body>  
 </html>
