--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Homepage</title>
     </head>
-    <body>
+<body>
         <header>
             <table>
                 <tr>
@@ -29,13 +29,15 @@
                 <p><a href="Pages/Anchor & Image.html">Anchor and Image</a> || <a href="Pages/Nota Pembelian.html">Nota Pembelian</a> </p>
                 <p><a href="Pages/Playlist Video.html">Playlist Video</a> || <a href="Pages/Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p>                          
             </nav>
-                <footer>
-                    <br>
-                    <br>
-                    <strong> THANK YOU </strong>
 
-                </footer>
+            <article>
+                <h2>Studi Independen Full Stack Web Developer PT Arkatama Multi Solusindo</h2>
+            </article>
+
+            <footer>                 
+                <h3> THANK YOU </h3>
+            </footer>
         </center>
 
-    </body>  
+</body>  
 </html>
