--- a/Pages/List.html
+++ b/Pages/List.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>List</title>
+        <link rel="stylesheet" type="text/css" href="../Assets/Style.css">
     </head>
-<body>
+    <body>
         <header>
             <table>
                 <tr>
@@ -19,6 +20,7 @@
                     <p><a href="Text.html">Text Formating</a> || <a href="List.html">List</a></p>
                     <p><a href="Anchor & Image.html">Anchor and Image</a> || <a href="Nota Pembelian.html">Nota Pembelian</a> </p>
                     <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
+                    <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a></p>
                 </center>
         </nav>
 
@@ -42,6 +44,7 @@
                 Provinsi Di Indonesia
             </h1>
         
+            
             <ul>
                 <li>Nanggroe Aceh Darussalam (Ibu Kota Banda Aceh)</li>
                 <li>Sumatera Selatan (Ibu Kota Palembang)</li>
@@ -80,8 +83,8 @@
                 <li>Papua Pegunungan (Ibu Kota Jayawijaya)</li>
                 <li>Papua Selatan (Ibu Kota Merauke)</li>
                 <li>Papua Barat Daya (Ibu Kota Sorong)</li>
-            </ol>
+            </ul>   
         </article>
 
-</body> 
+    </body> 
 </html>
