--- a/Pages/Nota Pembelian.html
+++ b/Pages/Nota Pembelian.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>Nota Pembelian</title>
+        <link rel="stylesheet" type="text/css" href="../Assets/Style.css">
     </head>
-<body>
+    <body>
         <header>
             <table>
                 <tr>
@@ -19,6 +20,7 @@
                     <p><a href="Text.html">Text Formating</a> || <a href="List.html">List</a></p>
                     <p><a href="Anchor & Image.html">Anchor and Image</a> || <a href="Nota Pembelian.html">Nota Pembelian</a> </p>
                     <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
+                    <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a></p>
                 </center>
         </nav>
 
@@ -144,5 +146,5 @@
             </table>
         </article>
     
-</body>
+    </body>
 </html>
