--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Homepage</title>
+            <title>Homepage</title>
+            <link rel="stylesheet" type="text/css" href="../../Studpen Arkatama/Fswd3-html-dasar/Assets/Style.css">
     </head>
-<body>
+    <body>
         <header>
-            <table>
+            <table >
                 <tr>
                     <center>
                         <h1 style="text-align: center;" width="75%">Tugas FSWD Arkatama Batch 2</h1>
@@ -28,6 +29,7 @@
                 <p><a href="Pages/Text.html">Text Formating</a> || <a href="Pages/List.html">List</a></p>
                 <p><a href="Pages/Anchor & Image.html">Anchor and Image</a> || <a href="Pages/Nota Pembelian.html">Nota Pembelian</a> </p>
                 <p><a href="Pages/Playlist Video.html">Playlist Video</a> || <a href="Pages/Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p>                          
+                <p><a href="Pages/Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a></p>
             </nav>
 
             <article>
@@ -39,5 +41,5 @@
             </footer>
         </center>
 
-</body>  
+    </body>  
 </html>
