--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
             <title>Homepage</title>
-            <link rel="stylesheet" type="text/css" href="../../Studpen Arkatama/Fswd3-html-dasar/Assets/Style.css">
+            <link rel="stylesheet" type="text/css" href="../Fswd3-html-dasar/Assets/Style.css">
     </head>
     <body>
         <header>
@@ -40,6 +40,5 @@
                 <h3> THANK YOU </h3>
             </footer>
         </center>
-
     </body>  
 </html>
