--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
             <title>Homepage</title>
-            <link rel="stylesheet" type="text/css" href="../Fswd3-html-dasar/Assets/Style.css">
+            <link rel="stylesheet" type="text/css" href="Assets/Style.css">
     </head>
     <body>
-        
+
         <header>
             <table >
                 <tr>
