--- a/Pages/Anchor & Image.html
+++ b/Pages/Anchor & Image.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" type="text/css" href="../Assets/Style.css">
     </head>
     <body>
-    
         <header>
             <table>
                 <tr>
@@ -21,10 +20,11 @@
                     <p><a href="Text.html">Text Formating</a> || <a href="List.html">List</a></p>
                     <p><a href="Anchor & Image.html">Anchor and Image</a> || <a href="Nota Pembelian.html">Nota Pembelian</a> </p>
                     <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
-                    <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a></p>
+                    <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Grid.html">Grid Layout</a></p>
+                    <p><a href="Flexbox.html">Flexbox Layout</a></p>
                 </center>
         </nav>
-        
+
         <article>
 
                 <center>
