--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <p><a href="Pages/Text.html">Text Formating</a> || <a href="Pages/List.html">List</a></p>
                 <p><a href="Pages/Anchor & Image.html">Anchor and Image</a> || <a href="Pages/Nota Pembelian.html">Nota Pembelian</a> </p>
                 <p><a href="Pages/Playlist Video.html">Playlist Video</a> || <a href="Pages/Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p>                          
-                <p><a href="Pages/Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a></p>
+                <p><a href="Pages/Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Pages/Grid.html">Grid Layout</a></p>
+                <p><a href="Pages/Flexbox.html">Flexbox Layout</a></p>
             </nav>
 
             <article>
