--- a/Pages/Galeri Bahasa Bunga.html
+++ b/Pages/Galeri Bahasa Bunga.html
@@ -19,8 +19,9 @@
                     <p><a href="../index.html">Homepage</a> || <a href="heading.html">Heading</a></p>
                     <p><a href="Text.html">Text Formating</a> || <a href="List.html">List</a></p>
                     <p><a href="Anchor & Image.html">Anchor and Image</a> || <a href="Nota Pembelian.html">Nota Pembelian</a> </p>
-                        <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
-                <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a></p>
+                    <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
+                    <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Grid.html">Grid Layout</a></p>
+                    <p><a href="Flexbox.html">Flexbox Layout</a></p>
                 </center>
         </nav>
 
