--- a/Pages/Games.html
+++ b/Pages/Games.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <title>Text Formating</title>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Code-structure</title>
             <link rel="stylesheet" type="text/css" href="../Assets/Style.css">
     </head>
     <body>
@@ -26,25 +29,7 @@
             </center>
             <hr>
         </nav>
-
-        <article>
-            <h1 style="text-align:center;">
-                Text Formating
-            </h1>
-        
-                <ol type-"1" style="text-align:center">
-                    <p><b>bold</b></p>
-                    <p><strong>strong</strong></p>
-                    <p><i>itapc</i></p>
-                    <p><em>emphasis</em></p>
-                    <p><mark>mark</mark></p>
-                    <p><small>small</small></p>
-                    <p><del>del</del></p>
-                    <p><ins>ins</ins></p>
-                    <p>O<sub>2</sub></p>
-                    <p>S<sup>2</sup></p> 
-                </ol>
-        </article>
-       
+        <script src="../JavaScript/Games.js"> </script> 
     </body>
 </html>
+
