--- a/Pages/Grid.html
+++ b/Pages/Grid.html
@@ -16,14 +16,16 @@
         </header>
     
         <nav>
-                <center>
-                    <p><a href="../index.html">Homepage</a> || <a href="heading.html">Heading</a></p>
-                    <p><a href="Text.html">Text Formating</a> || <a href="List.html">List</a></p>
-                    <p><a href="Anchor & Image.html">Anchor and Image</a> || <a href="Nota Pembelian.html">Nota Pembelian</a> </p>
-                    <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
-                    <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Grid.html">Grid Layout</a></p>
-                    <p><a href="Flexbox.html">Flexbox Layout</a></p>
-                </center>
+            <center>
+                <p><a href="../index.html">Homepage</a> || <a href="heading.html">Heading</a></p>
+                <p><a href="Text.html">Text Formating</a> || <a href="List.html">List</a></p>
+                <p><a href="Anchor & Image.html">Anchor and Image</a> || <a href="Nota Pembelian.html">Nota Pembelian</a> </p>
+                <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
+                <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Grid.html">Grid Layout</a></p>
+                <p><a href="Flexbox.html">Flexbox Layout</a></p> || <p><a href="Games.html">Games</a></p>
+                <p><a href="Fundamental.html">Fundamental Js</a></p>
+            </center>
+            <hr>
         </nav>
         <article>
                 <center>
