--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 <p><a href="Pages/Anchor & Image.html">Anchor and Image</a> || <a href="Pages/Nota Pembelian.html">Nota Pembelian</a> </p>
                 <p><a href="Pages/Playlist Video.html">Playlist Video</a> || <a href="Pages/Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p>                          
                 <p><a href="Pages/Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Pages/Grid.html">Grid Layout</a></p>
-                <p><a href="Pages/Flexbox.html">Flexbox Layout</a></p>
+                <p><a href="Pages/Flexbox.html">Flexbox Layout</a> || <a href="Pages/Games.html">Games</a></p>
+                <p><a href="Pages/Fundamental.html">Fundamental Js</a></p>
+                <hr>
             </nav>
 
             <article>
