--- a/Pages/Fundamental.html
+++ b/Pages/Fundamental.html
@@ -29,6 +29,6 @@
         </center>
         <hr>
     </nav>
-    <script src="../javascript/Fundamental.js"></script>
+    <script src="../JavaScript/Fundamental.js"></script>
 </body>
 </html>
