--- a/Pages/Array.html
+++ b/Pages/Array.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundamental js</title>
+    <title>Data Mahasiswa</title>
     <link rel="stylesheet" type="text/css" href="../Assets/Style.css">
 </head>
 <body>
@@ -27,8 +27,11 @@
             <p><a href="Fundamental.html">Fundamental Js</a> || <a href="Array.html">Data Mahasiswa</a></p>
             <p><a href="Todolist.html">ToDo List</a></p>
         </center>
-        <hr>
-    </nav>
-    <script src="../JavaScript/Fundamental.js"></script>
+   <article>
+        <div style="background-color: rgb(202, 177, 144); border: 10px solid rgb(105, 82, 52); padding: 5x; text-align: center;">
+        <h2>  Lihat hasil di Console ya </h2>
+                <script src="../JavaScript/Array.js"></script>
+    </article>
+
 </body>
 </html>
