--- a/Pages/Text.html
+++ b/Pages/Text.html
@@ -21,8 +21,9 @@
                 <p><a href="Anchor & Image.html">Anchor and Image</a> || <a href="Nota Pembelian.html">Nota Pembelian</a> </p>
                 <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
                 <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Grid.html">Grid Layout</a></p>
-                <p><a href="Flexbox.html">Flexbox Layout</a></p> || <p><a href="Games.html">Games</a></p>
-                <p><a href="Fundamental.html">Fundamental Js</a></p>
+                <p><a href="Flexbox.html">Flexbox Layout</a> || <a href="Games.html">Games</a></p>
+                <p><a href="Fundamental.html">Fundamental Js</a> || <a href="Array.html">Data Mahasiswa</a></p>
+                <p><a href="Todolist.html">ToDo List</a></p>
             </center>
             <hr>
         </nav>
