--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
             <p>ID Kegiatan : 4545666</p>
             
             <nav>
-                <p><a href="index.html">Homepage</a> || <a href="Pages/heading.html">Heading</a></p>
-                <p><a href="Pages/Text.html">Text Formating</a> || <a href="Pages/List.html">List</a></p>
-                <p><a href="Pages/Anchor & Image.html">Anchor and Image</a> || <a href="Pages/Nota Pembelian.html">Nota Pembelian</a> </p>
-                <p><a href="Pages/Playlist Video.html">Playlist Video</a> || <a href="Pages/Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p>                          
-                <p><a href="Pages/Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Pages/Grid.html">Grid Layout</a></p>
-                <p><a href="Pages/Flexbox.html">Flexbox Layout</a> || <a href="Pages/Games.html">Games</a></p>
-                <p><a href="Pages/Fundamental.html">Fundamental Js</a></p>
+                    <p><a href="index.html">Homepage</a> || <a href="Pages/Heading.html">Heading</a></p>
+                    <p><a href="Pages/Text.html">Text Formating</a> || <a href="Pages/List.html">List</a></p>
+                    <p><a href="Pages/Anchor & Image.html">Anchor and Image</a> || <a href="Pages/Nota Pembelian.html">Nota Pembelian</a> </p>
+                    <p><a href="Pages/Playlist Video.html">Playlist Video</a> || <a href="Pages/Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
+                    <p><a href="Pages/Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Pages/Grid.html">Grid Layout</a></p>
+                    <p><a href="Pages/Flexbox.html">Flexbox Layout</a> || <a href="Pages/Games.html">Games</a></p>
+                    <p><a href="Pages/Fundamental.html">Fundamental Js</a> || <a href="Pages/Array.html">Data Mahasiswa</a></p>
+                    <p><a href="Pages/Todolist.html">ToDo List</a></p>
                 <hr>
             </nav>
 
