--- a/Pages/Anchor & Image.html
+++ b/Pages/Anchor & Image.html
@@ -15,14 +15,14 @@
         </header>
         <nav>
             <center>
-                <p><a href="../index.html">Homepage</a> || <a href="heading.html">Heading</a></p>
-                <p><a href="Text.html">Text Formating</a> || <a href="List.html">List</a></p>
-                <p><a href="Anchor & Image.html">Anchor and Image</a> || <a href="Nota Pembelian.html">Nota Pembelian</a> </p>
-                <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
-                <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Grid.html">Grid Layout</a></p>
-                <p><a href="Flexbox.html">Flexbox Layout</a> || <a href="Games.html">Games</a></p>
-                <p><a href="Fundamental.html">Fundamental Js</a> || <a href="Array.html">Data Mahasiswa</a></p>
-                <p><a href="Todolist.html">ToDo List</a></p>
+                    <p><a href="../index.html">Homepage</a> || <a href="heading.html">Heading</a></p>
+                    <p><a href="Text.html">Text Formating</a> || <a href="List.html">List</a></p>
+                    <p><a href="Anchor & Image.html">Anchor and Image</a> || <a href="Nota Pembelian.html">Nota Pembelian</a> </p>
+                    <p><a href="Playlist Video.html">Playlist Video</a> || <a href="Form Pendaftaran SIB.html">Form Pendaftaran SIB</a> </p> 
+                    <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Grid.html">Grid Layout</a></p>
+                    <p><a href="Flexbox.html">Flexbox Layout</a> || <a href="Games.html">Games</a></p>
+                    <p><a href="Fundamental.html">Fundamental Js</a> || <a href="Array.html">Data Mahasiswa</a></p>
+                    <p><a href="Todolist.html">ToDo List</a> || <a href="Card Media Queries.html">Favorite Grup</a></p>
             </center>
             <hr>
         </nav>
