--- a/Pages/heading.html
+++ b/Pages/heading.html
@@ -22,9 +22,8 @@
                 <p><a href="Galeri Bahasa Bunga.html">Galeri Bahasa Bunga</a> || <a href="Grid.html">Grid Layout</a></p>
                 <p><a href="Flexbox.html">Flexbox Layout</a> || <a href="Games.html">Games</a></p>
                 <p><a href="Fundamental.html">Fundamental Js</a> || <a href="Array.html">Data Mahasiswa</a></p>
-                <p><a href="Todolist.html">ToDo List</a></p>
+                <p><a href="Todolist.html">ToDo List</a> || <a href="Card Media Queries.html">Favorite Grup</a></p>
             </center>
-            <hr>
         </nav>
 
         <article>
