--- a/Pages/Array.html
+++ b/Pages/Array.html
@@ -26,6 +26,7 @@
             <p><a href="Flexbox.html">Flexbox Layout</a> || <a href="Games.html">Games</a></p>
             <p><a href="Fundamental.html">Fundamental Js</a> || <a href="Array.html">Data Mahasiswa</a></p>
             <p><a href="Todolist.html">ToDo List</a> || <a href="Card Media Queries.html">Favorite Grup</a></p>
+            <p><a href="Bootstarp.html">Bootstrap</a></p>
         </center>
    <article>
         <div style="background-color: rgb(202, 177, 144); border: 10px solid rgb(105, 82, 52); padding: 5x; text-align: center;">
