--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <p><a href="Pages/Flexbox.html">Flexbox Layout</a> || <a href="Pages/Games.html">Games</a></p>
                     <p><a href="Pages/Fundamental.html">Fundamental Js</a> || <a href="Pages/Array.html">Data Mahasiswa</a></p>
                     <p><a href="Pages/Todolist.html">ToDo List</a> || <a href="Pages/Card Media Queries.html">Favorite Group</a></p>
+                    <p><a href="Pages/Bootstarp.html">Bootstrap</a></p>
                 <hr>
             </nav>
 
