--- a/Pages/Bootstarp.html
+++ b/Pages/Bootstarp.html
@@ -85,7 +85,7 @@
                 <div class="row pb-3">
                         <div class="col-md-4 pb-3">
                             <div class="card" style="width: 100%;">
-                                 <img src="../assets/EXO.jpg" alt="">
+                                 <img src="../Assets/EXO.jpg" alt="">
                                 <div class="card-body">
                                   <h5 class="card-title">EXO</h5>
                                   <p class="card-text">Exo (bahasa Korea: 엑소, sering ditulis sebagai EXO) adalah sebuah grup vokal pria Korea Selatan-Tiongkok yang berbasis di Seoul. Grup ini beranggotakan sembilan orang. Grup ini dibentuk oleh SM Entertainment pada tahun 2011 dan debut pada tahun 2012.</p>
@@ -94,7 +94,7 @@
                         </div>
                         <div class="col-md-4 pb-3">
                             <div class="card" style="width: 100%;">
-                                 <img src="../assets/Blackpink.jpg" alt="">
+                                 <img src="../Assets/Blackpink.jpg" alt="">
                                 <div class="card-body">
                                   <h5 class="card-title">Blackpink</h5>
                                   <p class="card-text">Blackpink (bahasa Korea: 블랙핑크, digayakan sebagai BLɅƆKPIИK) adalah grup vokal wanita asal Korea Selatan. Blackpink dibentuk oleh YG Entertainment dengan beranggotakan empat orang, diantaranya Jennie, Jisoo, Lisa, dan Rosé.</p>
